# archive-tool

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  accept.txt  blacklist.txt  docker-compose.yml  package.json  pnpm-lock.yaml  run.sh
.github/workflows/: ci.yml  release.yml  tag.yml
prisma/: schema.prisma
src/: archive.rs  archive.ts  checkUrl.ts  collection.rs  config.ts  db.rs  db.ts  error.rs  main.rs  main.ts  prelude.rs
wget2/: Dockerfile
