[package]
name = "archive-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.24"
dotenvy = "0.15.7"
lazy_static = "1.4.0"
log = "0.4.17"
regex = "1.7.3"
reqwest = "0.11.16"
simple_logger = "4.1.0"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres"] }
subprocess = "0.2.9"
tokio = { version = "1.27.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
url = "2.3.1"
