[package]
name = "archive-tool"
version = "0.1.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.24"
clap = { version = "4.2.4", features = ["derive"] }
dotenvy = "0.15.7"
log = "0.4.17"
num_cpus = "1.15.0"
reqwest = "0.11.16"
simple_logger = "4.1.0"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres"] }
subprocess = "0.2.9"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
